# centaur

./: .gitignore  AGENTS.md  Justfile  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  values-live.yaml
.agents/skills/company-context/: SKILL.md
.agents/skills/qa/: SKILL.md
.github/: dependabot.yml
.github/workflows/: build-fleet-images.yml  ci.yml  console-ci.yml  console-gem-audit.yml  publish-images.yml  release-chart.yml  tool-import-check.yml
centaur_sdk/: __init__.py  tool_sdk.py
centaur_sdk/tests/: test_tool_sdk.py
contrib/chart/: Chart.yaml  values.dev.yaml  values.schema.json  values.yaml
contrib/chart/templates/: NOTES.txt  _helpers.tpl  apirs.yaml  console-worker.yaml  console.yaml  googlechatbot.yaml  ingress.yaml  iron-control.yaml  laminar.yaml  networkpolicy.yaml  otlp-forwarder.yaml  rbac.yaml  repo-cache.yaml  services.yaml  slackbotv2.yaml  token-broker.yaml  workloads.yaml
contrib/scripts/: bootstrap-k8s-secrets.sh  test-workflow.sh
crates/harness-server/: Cargo.toml
crates/harness-server/src/: amp.rs  anthropic.rs  claude.rs  codex.rs  error.rs  lib.rs  main.rs  nanocodex.rs  nanocodex_subagents.rs  otel.rs  server.rs  traits.rs  turn.rs  util.rs
crates/harness-server/tests/: app_server_stdio.rs
docs/: sidebar.ts
docs/components/: ThreadPanel.tsx
docs/pages/: _root.css  deploying-in-production.mdx  mac-mini-setup.mdx  quickstart.mdx
docs/pages/extend/: tools.mdx  workflows-v2.mdx  workflows.mdx
docs/pages/operate/: slack-etl.mdx
docs/pages/reference/: configuration.mdx  tool-directory.mdx
docs/pages/secrets/: oauth-apps.mdx
docs/public/md/: deploying-in-production.md  quickstart.md
harness/claude/: settings.json
harness/codex/: config.toml
scripts/: check_tool_imports.py
services/: AGENTS.md
services/api/: Dockerfile  pyproject.toml  tool-server-startup.sh
services/api-rs/: AGENTS.md  Cargo.toml  Dockerfile
services/api-rs/crates/centaur-iron-control/: Cargo.toml
services/api-rs/crates/centaur-iron-control/src/: client.rs  lib.rs  models.rs  principal.rs  registry.rs  session.rs
services/api/api/: agent.py  api_keys.py  app.py  broker_config.py  chatbot_client.py  db.py  deps.py  harness_config.py  iron-proxy.base.yaml  laminar_tracing.py  logging_config.py  models.py  otel.py  proxy_config.py  runtime_control.py  slackbot_client.py  tool_manager.py  tool_server_app.py  vm_metrics.py  webhooks.py  workflow_engine.py  workflow_executor.py
services/api/tests/: test_agent_control_plane.py  test_api_router_edges.py  test_attachments.py  test_broker_config.py  test_claude_app_wrapper.py  test_codex_app_wrapper.py  test_company_context_documents.py  test_create_pool_retry.py  test_git_branch_helper.py  test_github_issue_triage_workflow.py  test_google_calendar_sync.py  test_google_drive_sync.py  test_gsuite_integrations.py  test_harness_config.py  test_harness_protocol.py  test_hot_reload_gate.py  test_integration.py  test_linear_integrations.py  test_linear_sync.py  test_logging_config.py  test_otel.py  (+15 more)
services/chatbot/: .env.example  Dockerfile  env.d.ts  package.json  tsconfig.json
services/console/: AGENTS.md  Gemfile  README.md
services/discordbot/: AGENTS.md
services/githubbot/: AGENTS.md
services/googlechatbot/: .env.example  Dockerfile  README.md  SLACK_PARITY.md  package.json  tsconfig.json
services/iron-proxy/: AGENTS.md  Dockerfile  iron-proxy.yaml
services/linearbot/: AGENTS.md
services/sandbox/: AGENTS.md  Dockerfile  SYSTEM_PROMPT.md  call.sh  claude-app-wrapper.py  codex-app-wrapper.py  compose_system_prompt.py  entrypoint.sh  git-branch.sh  install_tool_shims.py  repo_cache_sync.py  test_compose_system_prompt.py  test_git_branch.py  test_install_tool_shims.py  test_repo_cache_sync.py  test_system_prompt.py
services/slackbot/: Dockerfile  package.json
services/slackbotv2/: AGENTS.md
services/teamsbot/: AGENTS.md
services/workflow-python/: AGENTS.md  pyproject.toml  workflow_host.py
tools/: README.md
tools/business/app_store/: .env.example  __init__.py  cli.py  client.py  pyproject.toml
tools/business/crisp/: .env.example  __init__.py  cli.py  client.py  pyproject.toml
tools/business/stripe/: .env.example  __init__.py  cli.py  client.py  pyproject.toml
tools/comms/google_chat/: .env.example  __init__.py  cli.py  client.py  pyproject.toml
tools/comms/google_chat/tests/: conftest.py  test_client.py
tools/comms/twitter/: cli.py  client.py  pyproject.toml  test_client.py
tools/infra/centaur-console/: __init__.py  cli.py  client.py  pyproject.toml  test_client.py
tools/infra/cloudflare/: __init__.py  cli.py  client.py  pyproject.toml
tools/infra/cloudwatch/: pyproject.toml
tools/infra/codex/: client.py  pyproject.toml
tools/infra/gcp_logs/: .env.example  __init__.py  cli.py  client.py  pyproject.toml
tools/infra/posthog/: cli.py  client.py  pyproject.toml
tools/infra/sentry/: .env.example  __init__.py  cli.py  client.py  pyproject.toml
tools/productivity/company_context/: cli.py  client.py  pyproject.toml
tools/productivity/company_context/tests/: test_client.py
tools/productivity/github_repos/: .env.example  __init__.py  cli.py  client.py  pyproject.toml
tools/productivity/linear/: cli.py  client.py  pyproject.toml
tools/research/exa/: .env.example  __init__.py  cli.py  client.py  pyproject.toml
tools/research/preqin/: pyproject.toml
tools/research/preqin/centaur_tool_preqin/: client.py
tools/research/preqin/tests/: test_client.py
tools/research/sensortower/: pyproject.toml
tools/research/websearch/: pyproject.toml
workflows/: attio_sync.py  company_context_documents.py  company_context_metrics.py  google_calendar_sync.py  google_drive_sync.py  granola_sync.py  linear_sync.py  openfort_pulse_daily.py  slack_backfill.py  slack_sync.py  slack_sync_shared.py
workflows/google_chat/: client.py  sync.py
workflows/gsuite/: http.py
workflows/slack/: backfill.py  retention.py  shared.py  sync.py
workflows/tests/: test_attio_sync.py  test_company_context_documents_attachments.py  test_google_chat_etl.py  test_granola_sync.py
(+427 files in other folders)
