[project]
name = "crisp"
version = "0.1.0"
description = "Crisp Chat customer support"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
crisp = "crisp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.centaur]
module = "client.py"
hosts = ["api.crisp.chat"]
secrets = [
    {type = "http", name = "CRISP_API_CREDENTIALS", match_headers = ["Authorization"], hosts = ["api.crisp.chat"]},
]
