[project]
name = "twitter"
description = "Twitter CLI for user profiles, followers, tweets, and search"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.28.1",
    "tenacity>=8.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
twitter = "centaur_tool_twitter.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.sources]
"." = "centaur_tool_twitter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.centaur]
module = "client.py"
secrets = [{type = "http", name = "SYNOPTIC_API_KEY", mode = "inject", inject_header = "x-api-key", hosts = ["api.synoptic.com"]}]
