[project]
name = "cloudflare"
version = "0.1.0"
description = "Cloudflare zone analytics, DNS, Workers"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
cloudflare = "cloudflare.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.centaur]
module = "client.py"
hosts = ["api.cloudflare.com"]
secrets = [
    {type = "http", name = "CLOUDFLARE_API_TOKEN", match_headers = ["Authorization"], hosts = ["api.cloudflare.com"]},
]
