[project]
name = "cloudwatch"
description = "AWS CloudWatch — Logs Insights queries, log events, metrics, and alarms (read-only)"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# AWS SigV4 rides iron-proxy's `aws_auth` transform: boto3 signs each request
# with throwaway placeholder credentials, and iron-proxy re-signs it with the
# real read-only IAM keys it resolves from `access_key_id`/`secret_access_key`
# (stored in the secrets backend like any other tool credential). The real keys
# never enter the tool process — same placeholder-swap model as the `secrets`
# transform, just for SigV4. Scope the IAM user to read-only CloudWatch.
[tool.centaur]
module = "client.py"
hosts = ["logs.*.amazonaws.com", "monitoring.*.amazonaws.com"]
secrets = [
    { type = "aws_auth", name = "cloudwatch", access_key_id = "AWS_ACCESS_KEY_ID", secret_access_key = "AWS_SECRET_ACCESS_KEY", hosts = [
        "logs.*.amazonaws.com",
        "monitoring.*.amazonaws.com",
    ], allowed_services = [
        "logs",
        "monitoring",
    ] },
]
