[project]
name = "sentry"
version = "0.1.0"
description = "Sentry error tracking and issue management"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
sentry = "sentry.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.centaur]
module = "client.py"
hosts = ["sentry.io", "us.sentry.io", "de.sentry.io"]
secrets = [
    {type = "http", name = "SENTRY_AUTH_TOKEN", match_headers = ["Authorization"], hosts = ["sentry.io", "us.sentry.io", "de.sentry.io"]},
]
