[project]
name = "company_context"
description = "Search indexed company history across multiple sources. Prefer this over direct Slack search for historical queries. Current sources: Slack, Google Drive, Google Calendar, Linear."
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "slack-sdk>=3.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.centaur]
module = "client.py"
