[project]
name = "github-repos"
version = "0.1.0"
description = "GitHub repository operations — issues, PRs, code search, contents"
requires-python = ">=3.11"
dependencies = ["httpx"]

[tool.centaur]
module = "client.py"
hosts = ["api.github.com"]
secrets = [
    {type = "http", name = "GITHUB_TOKEN", match_headers = ["Authorization"], hosts = ["api.github.com"]},
]
