[project]
name = "linear"
description = "Linear issue tracking — issues, projects, cycles, teams"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
linear = "linear.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.centaur]
module = "client.py"
secrets = [
    {type = "http", name = "LINEAR_API_KEY", match_headers = ["Authorization"], hosts = ["api.linear.app", "uploads.linear.app"]},
]
