[project]
name = "exa"
version = "0.1.0"
description = "Exa semantic web search"
requires-python = ">=3.11"
dependencies = ["httpx"]

[tool.centaur]
module = "client.py"
hosts = ["api.exa.ai"]
secrets = [
    {type = "http", name = "EXA_API_KEY", match_headers = ["Authorization"], hosts = ["api.exa.ai"]},
]
