[project]
name = "sensortower"
description = "SensorTower CLI for mobile app analytics"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.centaur]
module = "client.py"
secrets = [{type = "http", name = "SENSOR_TOWER_AUTH_TOKEN", match_query = true, hosts = ["api.sensortower.com", "app.sensortower.com"]}]
