[package]
name = "centaur-iron-control"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
centaur-iron-proxy.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
urlencoding.workspace = true

[lints]
workspace = true
